fix: properly showing chat messages on mobile screens

--- a/client/src/components/UI/ChatInBox/ChatInBox.module.scss
+++ b/client/src/components/UI/ChatInBox/ChatInBox.module.scss
@@ -1,6 +1,7 @@
 .chat-in-box {
   background-color: var(--color-grey-dark-2);
   // font-size: 1.8rem;
+  font-weight: 40rem;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -34,6 +35,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: 1300px) {
+      height: 90vh;
+      padding-bottom: 8rem;
+    }
 
     %message {
       padding: 0.2rem 0.4rem;
@@ -226,6 +232,7 @@
         flex: 1;
         padding: 1.6rem 0.8rem;
         font-size: 1.8rem;
+        font-weight: 30rem;
         background-color: var(--color-grey-dark-4);
         color: var(--color-grey-light-1);
         border: 0.2rem solid var(--color-grey-dark-4);
